--- a/TopCard/bin/swt/swl/topcard/view/RequirementCardView.fxml
+++ b/TopCard/bin/swt/swl/topcard/view/RequirementCardView.fxml
@@ -118,7 +118,7 @@
                   </VBox>
                </children>
             </HBox>
-            <HBox prefHeight="18.0" prefWidth="277.0">
+            <HBox prefHeight="26.0" prefWidth="435.0">
                <children>
                   <MenuButton mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" text="New">
                     <items>
@@ -127,6 +127,7 @@
                     </items>
                   </MenuButton>
                   <Button fx:id="searchRqButton" mnemonicParsing="false" onAction="#searchRqButtonClicked" prefHeight="11.0" prefWidth="126.0" text="Search" textAlignment="CENTER" />
+                  <Button fx:id="searchRqButton1" layoutX="110.0" layoutY="10.0" mnemonicParsing="false" onAction="#searchRqButtonClicked" prefHeight="26.0" prefWidth="148.0" text="Subsrcibe on Team" textAlignment="CENTER" />
                </children>
             </HBox>
             <ImageView fx:id="startButton" fitHeight="35.0" fitWidth="26.0" layoutX="17.0" layoutY="39.0" onMouseClicked="#startButtonClicked" pickOnBounds="true" preserveRatio="true">
