--- a/TopCard/src/swt/swl/topcard/view/RequirementCardView.fxml
+++ b/TopCard/src/swt/swl/topcard/view/RequirementCardView.fxml
@@ -17,10 +17,7 @@
                   <Pane fx:id="mainWindowPainLeft" prefHeight="692.0" prefWidth="446.0">
                      <children>
                         <TableView fx:id="requirementCardsTable" layoutX="1.0" layoutY="7.0" prefHeight="685.0" prefWidth="445.0">
-                          <columns>
-                            <TableColumn fx:id="requirementCards" prefWidth="212.0" text="Requirement Cards" />
-                              <TableColumn fx:id="owner" prefWidth="232.0" text="Owner" />
-                          </columns>
+                          
                         </TableView>
                      </children>
                   </Pane>
@@ -127,7 +124,7 @@
                     </items>
                   </MenuButton>
                   <Button fx:id="searchRqButton" mnemonicParsing="false" onAction="#searchRqButtonClicked" prefHeight="11.0" prefWidth="126.0" text="Search" textAlignment="CENTER" />
-                  <Button fx:id="searchRqButton1" layoutX="110.0" layoutY="10.0" mnemonicParsing="false" onAction="#searchRqButtonClicked" prefHeight="26.0" prefWidth="148.0" text="Subsrcibe on Team" textAlignment="CENTER" />
+                  <Button fx:id="subsrcibeButton" layoutX="110.0" layoutY="10.0" mnemonicParsing="false" onAction="#subscribeButtonClicked" prefHeight="26.0" prefWidth="148.0" text="Subsrcibe on Team" textAlignment="CENTER" />
                </children>
             </HBox>
             <ImageView fx:id="startButton" fitHeight="35.0" fitWidth="26.0" layoutX="17.0" layoutY="39.0" onMouseClicked="#startButtonClicked" pickOnBounds="true" preserveRatio="true">
