--- a/TopCard/src/swt/swl/topcard/view/RequirementCardView.fxml
+++ b/TopCard/src/swt/swl/topcard/view/RequirementCardView.fxml
@@ -23,42 +23,47 @@
                   </Pane>
                   <VBox prefHeight="685.0" prefWidth="177.0">
                      <children>
-                        <Label fx:id="titleLabel" prefHeight="50.0" prefWidth="159.0" text="Title:">
+                        <Label prefHeight="50.0" prefWidth="159.0" text="Title:">
                            <font>
                               <Font size="15.0" />
                            </font>
                         </Label>
-                        <Label fx:id="descriptionLabel" prefHeight="50.0" prefWidth="159.0" text="Description:">
+                        <Label layoutX="20.0" layoutY="110.0" prefHeight="50.0" prefWidth="159.0" text="Modules:">
                            <font>
                               <Font size="15.0" />
                            </font>
                         </Label>
-                        <Label fx:id="rationaleLabel" prefHeight="50.0" prefWidth="159.0" text="Rationale:">
+                        <Label prefHeight="50.0" prefWidth="159.0" text="Description:">
                            <font>
                               <Font size="15.0" />
                            </font>
                         </Label>
-                        <Label fx:id="sourceLabel" prefHeight="50.0" prefWidth="159.0" text="Source:">
+                        <Label prefHeight="50.0" prefWidth="159.0" text="Rationale:">
                            <font>
                               <Font size="15.0" />
                            </font>
                         </Label>
-                        <Label fx:id="userstoriesLabel" prefHeight="50.0" prefWidth="159.0" text="Userstories:">
+                        <Label prefHeight="50.0" prefWidth="159.0" text="Source:">
                            <font>
                               <Font size="15.0" />
                            </font>
                         </Label>
-                        <Label fx:id="supportingMaterialsLabel" prefHeight="50.0" prefWidth="179.0" text="Supporting Materials:">
+                        <Label prefHeight="50.0" prefWidth="159.0" text="Userstories:">
                            <font>
                               <Font size="15.0" />
                            </font>
                         </Label>
-                        <Label fx:id="fitCriterionLabel" prefHeight="50.0" prefWidth="159.0" text="Fit criterion:">
+                        <Label prefHeight="50.0" prefWidth="179.0" text="Supporting Materials:">
                            <font>
                               <Font size="15.0" />
                            </font>
                         </Label>
-                        <Label fx:id="frozenLabel" prefHeight="50.0" prefWidth="159.0" text="Frozen ?">
+                        <Label prefHeight="50.0" prefWidth="159.0" text="Fit criterion:">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Label>
+                        <Label prefHeight="50.0" prefWidth="159.0" text="Frozen ?">
                            <font>
                               <Font size="15.0" />
                            </font>
@@ -74,6 +79,11 @@
                            <font>
                               <Font size="15.0" />
                            </font></Label>
+                        <Label fx:id="modulesResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="50.0" prefWidth="229.0">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Label>
                         <Label fx:id="descriptionResultLabel" prefHeight="50.0" prefWidth="256.0">
                            <font>
                               <Font size="15.0" />
@@ -112,6 +122,7 @@
                     <items>
                       <MenuItem fx:id="createModuleButton" mnemonicParsing="false" onAction="#createModuleButtonClicked" text="Module" />
                       <MenuItem fx:id="createNewRqButton" mnemonicParsing="false" onAction="#createNewRqButtonClicked" text="Requirement Card" />
+                        <MenuItem fx:id="createNewTeam" mnemonicParsing="false" onAction="#createNewTeamClicked" text="Team" />
                     </items>
                   </MenuButton>
                   <Button fx:id="searchRqButton" mnemonicParsing="false" onAction="#searchRqButtonClicked" prefHeight="11.0" prefWidth="126.0" text="Search" textAlignment="CENTER" />
@@ -123,6 +134,8 @@
                   <Image url="@icons/Button-Refresh-icon.png" />
                </image>
             </ImageView>
+            <Label layoutX="704.0" layoutY="18.0" prefHeight="16.0" prefWidth="88.0" text="signed in as: " />
+            <Label fx:id="loginNameLabel" layoutX="792.0" layoutY="18.0" prefHeight="16.0" prefWidth="100.0" />
          </children>
       </Pane>
    </children>
