--- a/TopCard/src/swt/swl/topcard/view/RequirementCardView.fxml
+++ b/TopCard/src/swt/swl/topcard/view/RequirementCardView.fxml
@@ -116,7 +116,7 @@
                   </VBox>
                </children>
             </HBox>
-            <HBox prefHeight="26.0" prefWidth="435.0">
+            <HBox fx:id="menuListHBox" prefHeight="26.0" prefWidth="435.0">
                <children>
                   <MenuButton mnemonicParsing="false" prefHeight="26.0" prefWidth="100.0" text="New">
                     <items>
@@ -126,7 +126,6 @@
                     </items>
                   </MenuButton>
                   <Button fx:id="searchRqButton" mnemonicParsing="false" onAction="#searchRqButtonClicked" prefHeight="11.0" prefWidth="126.0" text="Search" textAlignment="CENTER" />
-                  <ComboBox fx:id="chooseTeamComboBox" prefWidth="150.0" promptText="Team.." />
                </children>
             </HBox>
             <ImageView fx:id="startButton" fitHeight="35.0" fitWidth="26.0" layoutX="17.0" layoutY="39.0" onMouseClicked="#startButtonClicked" pickOnBounds="true" preserveRatio="true">
