--- a/TopCard/src/swt/swl/topcard/view/RequirementCardView.fxml
+++ b/TopCard/src/swt/swl/topcard/view/RequirementCardView.fxml
@@ -123,6 +123,7 @@
                       <MenuItem fx:id="createModuleButton" mnemonicParsing="false" onAction="#createModuleButtonClicked" text="Module" />
                       <MenuItem fx:id="createNewRqButton" mnemonicParsing="false" onAction="#createNewRqButtonClicked" text="Requirement Card" />
                         <MenuItem fx:id="createNewTeam" mnemonicParsing="false" onAction="#createNewTeamClicked" text="Team" />
+                        <MenuItem fx:id="createNewUserStory" mnemonicParsing="false" onAction="#createNewUserStoryClicked" text="UserStory" />
                     </items>
                   </MenuButton>
                   <Button fx:id="searchRqButton" mnemonicParsing="false" onAction="#searchRqButtonClicked" prefHeight="11.0" prefWidth="126.0" text="Search" textAlignment="CENTER" />
